--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
